--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       font-size: 20px;
     }
 
-    #container, #quiz-container, #result-container, #mistake-review-container, #current-mistakes-container, #console-logs-container, #update-logs-container, #function-intro-container, #summary-container {
+    #container, #quiz-container, #result-container, #mistake-review-container, #current-mistakes-container, #console-logs-container, #update-logs-container, #function-intro-container, #summary-container, #battle-mode-selection-container {
       margin: 30px auto;
       max-width: 800px;
       border: 2px solid #ddd;
@@ -51,6 +51,11 @@
       background-color: #fff;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       padding: 20px;
+      display: none; /* Hidden by default */
+    }
+
+    #container, #battle-mode-selection-container {
+      display: block; /* Show main container and battle mode selection by default */
     }
 
     #sheet-selection {
@@ -238,7 +243,7 @@
       max-width:100%;
     }
 
-    #mistake-review-container button, #current-mistakes-container button, #console-logs-container button, #update-logs-container button, #function-intro-container button, #summary-container button {
+    #mistake-review-container button, #current-mistakes-container button, #console-logs-container button, #update-logs-container button, #function-intro-container button, #summary-container button, #battle-mode-selection-container button {
       margin-top: 10px;
     }
 
@@ -257,7 +262,7 @@
       background: #f9f9f9;
     }
 
-    #update-logs-container, #function-intro-container, #summary-container {
+    #update-logs-container, #function-intro-container, #summary-container, #battle-mode-selection-container {
       display:none;
     }
 
@@ -343,6 +348,38 @@
       font-size: 24px;
       font-weight: bold;
     }
+
+    /* Battle Mode Selection Styles */
+    #battle-mode-selection-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    #battle-mode-selection {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 500px;
+      width: 90%;
+      max-height: 80%;
+      overflow-y: auto;
+    }
+    #battle-mode-selection h3 {
+      margin-top: 0;
+    }
+    #battle-mode-selection .sheet-option {
+      margin-bottom: 10px;
+    }
+    #battle-mode-selection button {
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -368,7 +405,7 @@
     
     <!-- 新增“大乱斗”按钮 -->
     <div style="text-align: center; margin-top: 10px;">
-      <button onclick="startBattleMode()" style="background: #6f42c1;">大乱斗</button>
+      <button onclick="openBattleModeSelection()" style="background: #6f42c1;">大乱斗</button>
     </div>
 
     <div id="info">
@@ -388,6 +425,18 @@
         <p>大家一起努力！</p>
         <p>欢迎大家反馈改进！</p>
       </div>
+    </div>
+  </div>
+
+  <!-- 大乱斗模式选择容器 -->
+  <div id="battle-mode-selection-container">
+    <div id="battle-mode-selection">
+      <h3>选择参与大乱斗的套题</h3>
+      <div id="battle-sheet-selection">
+        <!-- 动态生成套题复选框 -->
+      </div>
+      <button onclick="startBattleMode()">开始大乱斗</button>
+      <button onclick="closeBattleModeSelection()">取消</button>
     </div>
   </div>
 
@@ -472,6 +521,14 @@
           <li>调整初始页面按钮优先级，将“继续考试”、“汇总表现”、“错题复习”、“功能介绍”置于同等优先级，降低“清除历史”、“控制台”、“更新日志”按钮的优先级</li>
           <li>缩小口号最后一句话的字体大小，避免文字溢出</li>
         </ul>
+        <!-- 新增功能更新日志 -->
+        <li>2024年12月20日 09:00 更新：</li>
+        <ul>
+          <li>在做题时显示正确答案的解说和解题思路</li>
+          <li>在查看错题和错题复习时显示错题的解说和解题思路</li>
+          <li>大乱斗模式支持多套题选择，生成综合性考试</li>
+          <li>更新功能介绍，包含新增的解说显示和多套题大乱斗模式</li>
+        </ul>
         <!-- 根据每次迭代，继续添加更新日志 -->
       </ul>
     </div>
@@ -485,7 +542,7 @@
       <li><strong>选择套题：</strong>从多个套题中选择您想要练习的题目。</li>
       <li><strong>随机题序：</strong>开启后，题目将以随机顺序出现，帮助您更好地掌握知识点。</li>
       <li><strong>自动翻题：</strong>开启后，选择答案后将自动跳转到下一题，无需手动点击“下一题”。</li>
-      <li><strong>大乱斗：</strong>将所有套题的题目混合在一起，进行一套综合性考试。</li>
+      <li><strong>大乱斗：</strong>选择多个套题的题目混合在一起，进行一套综合性考试。</li>
       <li><strong>继续考试：</strong>如果您有未完成的考试，可以随时继续之前的考试。</li>
       <li><strong>汇总表现：</strong>查看您的做题历史和表现，了解自己的学习进度和薄弱环节。</li>
       <li><strong>错题复习：</strong>查看并复习您之前做错的题目，帮助您巩固薄弱环节。</li>
@@ -493,6 +550,7 @@
       <li><strong>更新日志：</strong>查看平台的最新更新内容，了解新增功能和修复的Bug。</li>
       <li><strong>清除历史：</strong>一键清除您的考试记录和错题集，重新开始。</li>
       <li><strong>计时器：</strong>在做题界面显示实时计时器，监控您完成题目的时间。</li>
+      <li><strong>解说显示：</strong>在做题、查看错题和错题复习时显示题目的解说和解题思路。</li>
     </ul>
     <button onclick="resetQuiz()">返回首页</button>
   </div>
@@ -670,6 +728,7 @@
           return;
         }
         displaySheetSelection();
+        populateBattleModeSelection();
       } catch (e) {
         console.error(e);
         selectionContainer.innerHTML = "<p>加载套题失败，请检查配置或控制台日志。</p>";
@@ -718,6 +777,21 @@
       assignSheetButtonColors(); // 调用颜色分配函数
     }
 
+    function populateBattleModeSelection() {
+      const battleSelectionContainer = document.getElementById('battle-sheet-selection');
+      battleSelectionContainer.innerHTML = "";
+      sheetNames.forEach(sheet => {
+        const div = document.createElement('div');
+        div.classList.add('sheet-option');
+        div.innerHTML = `
+          <label>
+            <input type="checkbox" value="${sheet}"> ${sheet}
+          </label>
+        `;
+        battleSelectionContainer.appendChild(div);
+      });
+    }
+
     async function fetchQuestions(sheetName) {
       const sheetNameElem = document.getElementById('sheet-name');
       const questionElem = document.getElementById('question');
@@ -753,6 +827,13 @@
     }
 
     async function startBattleMode() {
+      const battleSelectionContainer = document.getElementById('battle-sheet-selection');
+      const selectedSheets = Array.from(battleSelectionContainer.querySelectorAll('input[type="checkbox"]:checked')).map(cb => cb.value);
+      if(selectedSheets.length === 0) {
+        alert("请至少选择一个套题进行大乱斗！");
+        return;
+      }
+
       let numQuestions = prompt("请输入大乱斗题数（10-500）：", "50");
       if (numQuestions === null) {
         // 用户取消输入
@@ -764,23 +845,14 @@
         return;
       }
 
+      // Close the battle mode selection modal
+      closeBattleModeSelection();
+
       const sheetSelectionContainer = document.getElementById('sheet-selection');
       sheetSelectionContainer.innerHTML = "<p>加载大乱斗套题中...</p>";
       try {
-        const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}?key=${apiKey}`;
-        const response = await fetch(url);
-        if(!response.ok) {
-          sheetSelectionContainer.innerHTML = "<p>加载大乱斗套题失败，请检查网络或配置。</p>";
-          return;
-        }
-        const data = await response.json();
-        if(!data.sheets) {
-          sheetSelectionContainer.innerHTML = "<p>未能获取套题，请检查Google Sheet配置。</p>";
-          return;
-        }
-        const allSheets = data.sheets.map(sheet => sheet.properties.title).filter(name => name !== "Console");
         let allQuestions = [];
-        for(const sheet of allSheets) {
+        for(const sheet of selectedSheets) {
           const sheetUrl = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${encodeURIComponent(sheet)}?key=${apiKey}`;
           const sheetResponse = await fetch(sheetUrl);
           if(sheetResponse.ok) {
@@ -802,11 +874,22 @@
         currentSheetName = "大乱斗套题";
         isBattleMode = true;
         questions = shuffle(allQuestions).slice(0, numQuestions);
+        if(randomOrder) {
+          questions = shuffle(questions);
+        }
         startQuiz();
       } catch(e) {
         console.error(e);
         sheetSelectionContainer.innerHTML = "<p>加载大乱斗套题失败，请检查配置或控制台日志。</p>";
       }
+    }
+
+    function openBattleModeSelection() {
+      document.getElementById('battle-mode-selection-container').style.display = 'flex';
+    }
+
+    function closeBattleModeSelection() {
+      document.getElementById('battle-mode-selection-container').style.display = 'none';
     }
 
     function processSheetData(values) {
@@ -833,10 +916,12 @@
           console.log(`无题目数据行: Sheet=${currentSheetName}, Row=${rowNumber}, Col=${colNumber}, 原始数据:`, row);
         }
         const qImage = row[2] ? row[2].trim() : "";
+        const qExplanation = row[7] ? row[7].trim() : ""; // 新增解释列（H列，索引7）
         return {
           question: qText || "无题目",
           image: qImage,
-          answer: row[8] === "o" ? "⭕" : "❌"
+          answer: row[8] === "o" ? "⭕" : "❌",
+          explanation: qExplanation || "无解说"
         };
       }).filter(q => q.question !== "无题目"); // 过滤掉无题目
     }
@@ -954,10 +1039,11 @@
 
     function toggleAnswer() {
       const correctAnswer = questions[currentQuestionIndex].answer;
+      const explanation = questions[currentQuestionIndex].explanation;
       if (answerVisible) {
         document.getElementById('answer-display').innerText = "";
       } else {
-        document.getElementById('answer-display').innerText = `正确答案：${correctAnswer}`;
+        document.getElementById('answer-display').innerText = `正确答案：${correctAnswer}\n解说：${explanation}`;
       }
       answerVisible = !answerVisible;
     }
@@ -1020,7 +1106,7 @@
           totalScore += scorePerQuestion;
         } else {
           incorrectCount++;
-          const key = q.question + '||' + q.answer + '||' + q.image;
+          const key = q.question + '||' + q.answer + '||' + q.image + '||' + q.explanation;
           if (mistakesObj[key]) {
             mistakesObj[key].count += 1;
             mistakesObj[key].userAnswer = userAnswer;
@@ -1032,6 +1118,7 @@
               question: q.question,
               image: q.image,
               answer: q.answer,
+              explanation: q.explanation,
               count: 1,
               userAnswer: userAnswer,
               sheetName: currentSheetName
@@ -1042,6 +1129,7 @@
             question: q.question,
             image: q.image,
             answer: q.answer,
+            explanation: q.explanation,
             userAnswer: userAnswer,
             sheetName: currentSheetName
           });
@@ -1184,7 +1272,8 @@
            <div><strong>题目 ${index + 1}：</strong>${item.question}</div>
            ${imgHTML}
            <div><strong>您的错误答案：</strong>${item.userAnswer}</div>
-           <div><strong>正确答案：</strong>${item.answer}</div>`;
+           <div><strong>正确答案：</strong>${item.answer}</div>
+           <div><strong>解说：</strong>${item.explanation}</div>`;
         mistakeContainer.appendChild(questionDiv);
       });
     }
@@ -1230,6 +1319,7 @@
            ${imgHTML}
            <div><strong>您的最后错误答案：</strong>${item.userAnswer}</div>
            <div><strong>正确答案：</strong>${item.answer}</div>
+           <div><strong>解说：</strong>${item.explanation}</div>
            <div><strong>错误次数：</strong>${cCount}</div>`;
         mistakeContainer.appendChild(questionDiv);
       });
