--- a/index.html
+++ b/index.html
@@ -10,20 +10,31 @@
       margin: 0;
       padding: 0;
       background-color: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
     }
     .container {
       position: relative;
+      width: 100%;
+      height: 100%;
       text-align: center;
-      overflow: hidden;
     }
     .brand-image {
       width: 100%;
-      height: 50vh;
+      height: 100%;
       object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
     }
     .language-buttons {
       position: absolute;
-      bottom: 10%;
+      bottom: 15%;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -66,7 +77,7 @@
     }
     .slogan {
       position: absolute;
-      top: 5%;
+      top: 10%;
       left: 50%;
       transform: translateX(-50%);
       color: white;
@@ -76,6 +87,7 @@
       background-color: rgba(0, 0, 0, 0.4);
       padding: 10px 20px;
       border-radius: 15px;
+      z-index: 1;
     }
   </style>
 </head>
