--- a/cn/index.html
+++ b/cn/index.html
@@ -409,8 +409,8 @@
   <!-- 大标题板块，包含域名/口号/标题 -->
   <h1 onclick="resetQuiz()">
     <div class="domain">zalem.app</div>
-    <div class="slogan">霓虹千里，始于足利，欢迎来到足利驾校！</div>
-    <div class="title">道路千万条，安全第一条；行车不规范，亲人泪两行！</div>
+    <!-- <div class="slogan">霓虹千里，始于足利，欢迎来到足利驾校！</div> -->
+   <!--  <div class="title">道路千万条，安全第一条；行车不规范，亲人泪两行！</div> -->
   </h1>
 
   <div id="container">
