--- a/jp/index.html
+++ b/jp/index.html
@@ -407,7 +407,7 @@
   <!-- 大見出し：ドメイン／スローガン／タイトル -->
   <h1 onclick="resetQuiz()">
     <div class="domain">zalem.app</div>
-    <div class="slogan">ネオンが千里、足利から始まる。足利ドライビングスクールへようこそ！</div>
+<!--     <div class="slogan">ネオンが千里、足利から始まる。足利ドライビングスクールへようこそ！</div> -->
     <div class="title">道路は何千もあり、安全が最優先。運転が不注意だと、大切な家族が悲しむ！</div>
   </h1>
 
