--- a/en/index.html
+++ b/en/index.html
@@ -426,7 +426,7 @@
   <!-- Main Heading: Domain / Slogan / Title -->
   <h1 onclick="resetQuiz()">
     <div class="domain">zalem.app</div>
-    <div class="slogan">Neon extends thousands of miles, starting from Ashikaga. Welcome to Ashikaga Driving School!</div>
+   <!--  <div class="slogan">Neon extends thousands of miles, starting from Ashikaga. Welcome to Ashikaga Driving School!</div> -->
     <div class="title">There may be thousands of roads, but safety comes first. If you drive recklessly, your loved ones will weep!</div>
   </h1>
 
