--- a/kr/index.html
+++ b/kr/index.html
@@ -426,7 +426,7 @@
   <!-- 대제목: 도메인 / 슬로건 / 타이틀 -->
   <h1 onclick="resetQuiz()">
     <div class="domain">zalem.app</div>
-    <div class="slogan">네온이 천 리, 아시카가에서 시작합니다. 아시카가 운전학교에 오신 걸 환영합니다!</div>
+<!--     <div class="slogan">네온이 천 리, 아시카가에서 시작합니다. 아시카가 운전학교에 오신 걸 환영합니다!</div> -->
     <div class="title">도로는 수천 가지, 안전이 우선! 부주의하면 소중한 가족이 슬퍼합니다.</div>
   </h1>
 
