--- a/vn/index.html
+++ b/vn/index.html
@@ -426,7 +426,7 @@
   <!-- Tiêu đề chính: Domain / Slogan / Title -->
   <h1 onclick="resetQuiz()">
     <div class="domain">zalem.app</div>
-    <div class="slogan">Ánh đèn neon trải dài nghìn dặm, bắt đầu từ Ashikaga. Chào mừng đến với Trường Lái xe Ashikaga!</div>
+<!--     <div class="slogan">Ánh đèn neon trải dài nghìn dặm, bắt đầu từ Ashikaga. Chào mừng đến với Trường Lái xe Ashikaga!</div> -->
     <div class="title">Có hàng ngàn con đường, nhưng an toàn là trên hết. Nếu bạn lái xe bất cẩn, người thân sẽ phải rơi lệ!</div>
   </h1>
 
